--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,7 +36,7 @@ screen.welcome.button.login=LOGIN
 screen.welcome.button.clear=CLEAR
 
 logo.title=go to Jasig home page
-copyright=Copyright &copy; 2015&ndash;2016 Avnet, Inc. All rights reserved.
+copyright=Copyright &copy; 2017 Client Solutions Ltd. All rights reserved.
 
 # Blocked Errors Page
 screen.blocked.header=Access Denied
