--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -69,9 +69,9 @@ authenticationFailure.AccountLockedException=This account has been locked.
 authenticationFailure.CredentialExpiredException=Your password has expired.
 authenticationFailure.InvalidLoginLocationException=You cannot login from this workstation.
 authenticationFailure.InvalidLoginTimeException=Your account is forbidden to login at this time.
-authenticationFailure.AccountNotFoundException=Invalid credentials.
+authenticationFailure.AccountNotFoundException=Invalid credentials. No Account.
 authenticationFailure.FailedLoginException=Invalid credentials.
-authenticationFailure.UNKNOWN=Invalid credentials.
+authenticationFailure.UNKNOWN=Invalid credentials. Unknown.
 
 INVALID_REQUEST_PROXY='pgt' and 'targetService' parameters are both required
 INVALID_TICKET_SPEC=Ticket failed validation specification. Possible errors could include attempting to validate a Proxy Ticket via a Service Ticket validator, or not complying with the renew true request.
